--- a/app/src/main/res/values-mr-rIN/strings.xml
+++ b/app/src/main/res/values-mr-rIN/strings.xml
@@ -712,5 +712,9 @@
     <!--Login Screen (New Changes)-->
     <string name="txt_sign_up_option">Don\'t have an account?</string>
     <string name="username_password_must_be_different">Username and Password must be different</string>
+    <string name="This_app_is_designed">This app is designed to enhance the knowledge of the general public by providing them authentic information on Covid19 including measures of personal protection and educational resources on Covid19.\n</string>
+    <string name="authentic_information">authentic information on Covid19 including measures of personal protection and educational resources on Covid19.</string>
+    <string name="Here_you_can_monitor">Here you can monitor your own health daily and reach out for help if you think you may have had unsafe exposure and may be infected.\n</string>
+    <string name="monitor_your_own_health">\" monitor your own health daily\"</string>
 
 </resources>
