--- a/app/src/main/res/values-v21/strings.xml
+++ b/app/src/main/res/values-v21/strings.xml
@@ -20,4 +20,5 @@
     <string name="stay_aware_stay_safe">Stay Aware | Stay Safe</string>
     <string name="assessment_visit_title">Assessment</string>
     <string name="enter_otp">Enter OTP</string>
+    <string name="send_otp">Send OTP</string>
 </resources>
